--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		<script src="%PUBLIC_URL%/js/index.min.js"></script>
 		<title>MovieDB</title>
 	</head>
-	<body>
+	<body style="padding-top: 60px">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 	</body>
