--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
 		<meta name="description" content="MovieDB - Find films and movies from everywhere." />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap" rel="stylesheet" />
 		<script src="%PUBLIC_URL%/js/index.min.js"></script>
 		<title>MovieDB</title>
 	</head>
